--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
             "type": "image/x-icon"
         }
     ],
-    "start_url": "/login.php",
+    "start_url": "/public/login.php",
     "background_color": "#FFFFFF",
     "display": "standalone",
     "scope": "/",
