--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,10 @@ jobs:
           coverage: xdebug
           extensions: pgsql, pdo_pgsql
 
+      - name: Configure Flux Pro credentials
+        run: |
+          composer config --auth http-basic.composer.fluxui.dev token ${{ secrets.FLUX_PRO_TOKEN }}
+
       - name: Install dependencies with composer
         run: composer update --no-ansi --no-interaction --no-progress
 
