Switch from GitHub Actions to ChipperCI for faster builds
- Add .chipperci.yml configuration for PHP 8.4, Node 20, PostgreSQL 15
- Disable GitHub Actions workflow (renamed to ci.yml.disabled)
- Install livewire/blaze for component rendering optimization
- Update composer dependencies (Laravel 12.32.5, added blaze)
- Configure ChipperCI pipeline: setup, composer, npm, migrations, tests

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "laravel/tinker": "^2.10.1",
         "league/csv": "^9.24",
         "league/flysystem-aws-s3-v3": "^3.29",
+        "livewire/blaze": "dev-main",
         "livewire/flux": "^2.4",
         "livewire/flux-pro": "^2.4",
         "livewire/livewire": "^3.0",
@@ -41,6 +42,12 @@
         "symfony/mailer": "^7.0",
         "webklex/laravel-imap": "^6.2"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/livewire/blaze"
+        }
+    ],
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.0",
         "brianium/paratest": "^7.8",
@@ -112,12 +119,16 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "repositories": {
         "flux": {
             "type": "composer",
             "url": "https://composer.fluxui.dev"
+        },
+        "blaze": {
+            "type": "vcs",
+            "url": "https://github.com/livewire/blaze"
         }
     }
 }
