--- a/.chipperci.yml
+++ b/.chipperci.yml
@@ -27,6 +27,9 @@ pipeline:
       echo "DB_DATABASE=nestogy_test" >> .env
       echo "DB_USERNAME=nestogy" >> .env
       echo "DB_PASSWORD=nestogy_dev_pass" >> .env
+      echo "CACHE_STORE=redis" >> .env
+      echo "REDIS_HOST=127.0.0.1" >> .env
+      echo "REDIS_PORT=6379" >> .env
 
   - name: Configure Flux Pro Credentials
     cmd: |
