Fix ChipperCI sed command to remove @pure directive from Flux file input
The previous sed command only checked line 1, but @pure is not on the first line.
Updated to remove @pure from any line in the file.

--- a/.chipperci.yml
+++ b/.chipperci.yml
@@ -40,7 +40,7 @@ pipeline:
 
   - name: Fix Flux File Input Component
     cmd: |
-      sed -i '1{/@pure/d;}' vendor/livewire/flux/stubs/resources/views/flux/input/file.blade.php || true
+      sed -i '/@pure/d' vendor/livewire/flux/stubs/resources/views/flux/input/file.blade.php || true
 
   - name: Install NPM Dependencies
     cmd: npm ci
