Improve Flux @pure removal in ChipperCI with debug output
- Add grep check before sed to verify @pure exists
- Add echo statements to show what happened
- This will help debug why the sed isn't working in CI

--- a/.chipperci.yml
+++ b/.chipperci.yml
@@ -40,7 +40,13 @@ pipeline:
 
   - name: Fix Flux File Input Component
     cmd: |
-      sed -i '/@pure/d' vendor/livewire/flux/stubs/resources/views/flux/input/file.blade.php || true
+      # Remove @pure directive from any line in the file
+      if grep -q "@pure" vendor/livewire/flux/stubs/resources/views/flux/input/file.blade.php 2>/dev/null; then
+        sed -i '/@pure/d' vendor/livewire/flux/stubs/resources/views/flux/input/file.blade.php
+        echo "Removed @pure directive from Flux file input component"
+      else
+        echo "No @pure directive found or file doesn't exist"
+      fi
 
   - name: Install NPM Dependencies
     cmd: npm ci
