--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "league/csv": "^9.24",
         "league/flysystem-aws-s3-v3": "^3.29",
         "livewire/blaze": "dev-main",
-        "livewire/flux": "^2.4",
+        "livewire/flux": "dev-main",
         "livewire/flux-pro": "^2.4",
         "livewire/livewire": "^3.0",
         "maatwebsite/excel": "^3.1",
@@ -46,6 +46,10 @@
         {
             "type": "vcs",
             "url": "https://github.com/livewire/blaze"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/FoleyBridge-Solutions/flux.git"
         }
     ],
     "require-dev": {
