Enable PCOV extension in ChipperCI for code coverage
- Add pcov to php_extensions in environment configuration
- PCOV will provide coverage data for phpunit

--- a/.chipperci.yml
+++ b/.chipperci.yml
@@ -2,6 +2,8 @@ version: 1
 
 environment:
   php: 8.4
+  php_extensions:
+    - pcov
   node: 20
 
 services:
@@ -34,12 +36,6 @@ pipeline:
   - name: Configure Flux Pro Credentials
     cmd: |
       echo "{\"http-basic\":{\"composer.fluxui.dev\":{\"username\":\"${FLUX_USERNAME}\",\"password\":\"${FLUX_PRO_TOKEN}\"}}}" > auth.json
-
-  - name: Install PCOV for Code Coverage
-    cmd: |
-      pecl install pcov
-      echo "extension=pcov.so" > /usr/local/etc/php/conf.d/pcov.ini
-      echo "pcov.enabled=1" >> /usr/local/etc/php/conf.d/pcov.ini
 
   - name: Install Composer Dependencies
     cmd: composer install --no-ansi --no-interaction --no-progress --prefer-dist --no-scripts
