Enable PCOV module for PHP CLI SAPI in ChipperCI
- Use phpenmod to enable PCOV for PHP 8.4 CLI
- PCOV was installed but disabled by maintainer
- This will activate coverage generation

--- a/.chipperci.yml
+++ b/.chipperci.yml
@@ -37,6 +37,7 @@ pipeline:
     cmd: |
       sudo apt-get update -qq
       sudo apt-get install -y -qq php8.4-pcov
+      sudo phpenmod -v 8.4 -s cli pcov
       php -m | grep pcov
 
   - name: Configure Flux Pro Credentials
