Increase PHP memory limit to 1GB for coverage generation
- Set memory_limit=1G when running phpunit with coverage
- Coverage generation exhausts default 512MB limit
- All 891 tests passing with PCOV enabled

--- a/.chipperci.yml
+++ b/.chipperci.yml
@@ -57,7 +57,7 @@ pipeline:
     cmd: php artisan migrate --force --seed
 
   - name: Run Tests with Coverage
-    cmd: vendor/bin/phpunit --coverage-clover=coverage.xml
+    cmd: php -d memory_limit=1G vendor/bin/phpunit --coverage-clover=coverage.xml
 
   - name: SonarQube Scan
     cmd: |
