--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,9 +52,10 @@ jobs:
 
       - name: Configure PHP for Coverage
         run: |
-          echo "memory_limit = 2G" >> ~/.phpenv/versions/$(php -r "echo PHP_VERSION;")/etc/conf.d/99-custom.ini
+          INI_FILE=$(php --ini | grep "Scan for additional .ini files" | sed -e "s|.*:\s*||")/99-custom.ini
+          echo "memory_limit = 2G" | sudo tee $INI_FILE
           php -v
-          php -i | grep memory_limit
+          php -r "echo 'Memory Limit: ' . ini_get('memory_limit') . PHP_EOL;"
           php -m | grep pcov
 
       - name: Configure Flux Pro credentials
