--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,7 @@ jobs:
           php-version: '8.4'
           coverage: xdebug
           extensions: pgsql, pdo_pgsql, redis
+          ini-values: memory_limit=-1
 
       - name: Configure Flux Pro credentials
         env:
@@ -93,7 +94,7 @@ jobs:
       - name: Run tests with coverage
         env:
           XDEBUG_MODE: coverage
-        run: php -d memory_limit=-1 vendor/bin/phpunit --coverage-clover=coverage.xml
+        run: vendor/bin/phpunit --coverage-clover=coverage.xml
 
       - name: Verify coverage file
         run: |
