--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,13 +42,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup PHP with Xdebug
+      - name: Setup PHP with PCOV
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.4'
-          coverage: xdebug
+          coverage: pcov
           extensions: pgsql, pdo_pgsql, redis
-          ini-values: memory_limit=-1
+          ini-values: memory_limit=1G, pcov.enabled=1
 
       - name: Configure Flux Pro credentials
         env:
@@ -92,9 +92,7 @@ jobs:
         run: php artisan migrate --force --seed
 
       - name: Run tests with coverage
-        env:
-          XDEBUG_MODE: coverage
-        run: vendor/bin/phpunit --coverage-clover=coverage.xml
+        run: php run-tests.php --coverage
 
       - name: Verify coverage file
         run: |
